[package]
name = "llm-usage"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
directories = "6.0.0"
hostname = "0.4.2"
os_info = "3.14.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
uuid = { version = "1.23.1", features = ["v4"] }
